corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -82,34 +82,52 @@
         <div class="content">
             <section class="section">
                 <h2>About me</h2>
-                <p>I´ve always been in love with sports, especially motor sports and cars.
-                As in today I look forward to finding a workplace where I can show my
-                skills and help however I can.</p>
+                <div class="content-box">
+                    <p>
+                        I´ve always been in love with sports, especially motor sports and cars. 
+                        As in today I look forward to finding a workplace where I can show my 
+                        skills and help however I can.
+                    </p>
+                </div>
             </section>
 
             <section class="section">
                 <h2>Skills</h2>
-                <div class="skills">
-                    <span class="skill-tag">SQL</span>
-                    <span class="skill-tag">Pyton</span>
-                    <span class="skill-tag">Java</span>
-                    <span class="skill-tag">C#</span>
-                    <span class="skill-tag">HTML</span>
-                    <span class="skill-tag">Cassandra</span>
-                    <span class="skill-tag">GitHub</span>
-                    <span class="skill-tag">Pyspark</span>
-                    <span class="skill-tag">MongoDB</span>
-                    <span class="skill-tag">MySQL</span>
-                    <span class="skill-tag">PostgreSQL</span>
-                    <span class="skill-tag">Excel</span>
-                    <span class="skill-tag">Unity</span>
-                    <span class="skill-tag">Visual Studio</span>
-                    <span class="skill-tag">Docker</span>
-                    <span class="skill-tag">English</span>
-                    <span class="skill-tag">Spanish</span>
-                    <span class="skill-tag">German</span>
-                    <span class="skill-tag">Italian</span>
+                <div class="content-box">
+                    <div class="skills">
+                        <span class="skill-tag">SQL</span>
+                        <span class="skill-tag">Pyton</span>
+                        <span class="skill-tag">Java</span>
+                        <span class="skill-tag">C#</span>
+                        <span class="skill-tag">HTML</span>
+                        <span class="skill-tag">Cassandra</span>
+                        <span class="skill-tag">GitHub</span>
+                        <span class="skill-tag">Pyspark</span>
+                        <span class="skill-tag">MongoDB</span>
+                        <span class="skill-tag">MySQL</span>
+                        <span class="skill-tag">PostgreSQL</span>
+                        <span class="skill-tag">Excel</span>
+                        <span class="skill-tag">Unity</span>
+                        <span class="skill-tag">Visual Studio</span>
+                        <span class="skill-tag">Docker</span>
+                        <span class="skill-tag">English</span>
+                        <span class="skill-tag">Spanish</span>
+                        <span class="skill-tag">German</span>
+                        <span class="skill-tag">Italian</span>
+                    </div>
                 </div>
+            </section>
+
+            <section class="section">
+                <h2>Experience</h2>
+                <div class="content-box">
+                    <article class="Trabajo">
+                        <h3>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</h3>
+                        <p>DIDI - MEXICO CITY</p>
+                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+                    </article>
+
+                    <article class="Trabajo">
             </section>
 
             <section class="section">
