corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             .content { padding: 25px; }
             .section h2 { font-size: 1.5em; }
         }
-    </style>
+      .section-box { background: #ffffff; padding: 25px; border-radius: 12px; margin-bottom: 30px; }
+</style>
 </head>
 <body>
     <div class="container">
@@ -80,7 +81,7 @@
         </header>
 
         <div class="content">
-            <section class="section">
+            <div class="section-box">
                 <h2>About me</h2>
                 <div class="content-box">
                     <p>
@@ -89,9 +90,9 @@
                         skills and help however I can.
                     </p>
                 </div>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Skills</h2>
                 <div class="content-box">
                     <div class="skills">
@@ -116,9 +117,9 @@
                         <span class="skill-tag">Italian</span>
                     </div>
                 </div>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Experience</h2>
                 <div class="content-box">
                     <article class="Trabajo">
@@ -163,9 +164,9 @@
                         <p>Support in billing, and review and control of excel documents.</p>
                     </article>
                 </div>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Education</h2>
                 <div class="content-box">
                     <article>
@@ -200,9 +201,9 @@
                         <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
                     </article>
                 </div>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Contacto</h2>
                 <div class="content-box">
                     <div class="contact">
@@ -220,11 +221,11 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Experiance</h2>
                 <div class="experiance">
                     <article class="Trabajo">
@@ -269,9 +270,9 @@
                         <p>Support in billing, and review and control of Excel documents.</p>
                     </article>
                 </div>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Education</h2>
                 <article>
                     <h3>ENGINEERING SCHOLARSHIP - (2023 - PRESENT DAY)</h3>
@@ -304,9 +305,9 @@
                     <h3>KLASSE 10 - (2018 - 2019)</h3>
                     <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
                 </article>
-            </section>
+            </div>
 
-            <section class="section">
+            <div class="section-box">
                 <h2>Contacto</h2>
                 <div class="contact">
                     <div class="contact-item">
@@ -322,7 +323,7 @@
                         <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank"> Marcio Tellez </a>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
 
         <footer>
