--- a/index.html
+++ b/index.html
@@ -91,140 +91,48 @@
                     </p>
                 </div>
             </div>
-
             <div class="section-box">
                 <h2>Skills</h2>
-                <div class="content-box">
-                    <div class="skills">
-                        <span class="skill-tag">SQL</span>
-                        <span class="skill-tag">Pyton</span>
+                <div class="skills-grid">
+                    <div class="skill-category">
+                        <h3>Programming Languages</h3>
+                        <span class="skill-tag">Python</span>
                         <span class="skill-tag">Java</span>
                         <span class="skill-tag">C#</span>
-                        <span class="skill-tag">HTML</span>
-                        <span class="skill-tag">Cassandra</span>
-                        <span class="skill-tag">GitHub</span>
-                        <span class="skill-tag">Pyspark</span>
-                        <span class="skill-tag">MongoDB</span>
-                        <span class="skill-tag">MySQL</span>
-                        <span class="skill-tag">PostgreSQL</span>
-                        <span class="skill-tag">Excel</span>
-                        <span class="skill-tag">Unity</span>
-                        <span class="skill-tag">Visual Studio</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">English</span>
-                        <span class="skill-tag">Spanish</span>
-                        <span class="skill-tag">German</span>
-                        <span class="skill-tag">Italian</span>
                     </div>
                 </div>
-            </div>
 
-            <div class="section-box">
-                <h2>Experience</h2>
-                <div class="content-box">
-                    <article class="Trabajo">
-                        <h3>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</h3>
-                        <p>DIDI - MEXICO CITY</p>
-                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    </article>
+                <div class="skill-category">
+                    <h3>Databases</h3>
+                    <span class="skill-tag">MySQL</span>
+                    <span class="skill-tag">PostgreSQL</span>
+                    <span class="skill-tag">MongoDB</span>
+                    <span class="skill-tag">Cassandra</span>
+                </div>
 
-                    <article class="Trabajo">
-                        <h3>BI INTERN - (JANUARY 2025 - MAY 2025)</h3>
-                        <p>DIDI - MEXICO CITY</p>
-                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    </article>
 
-                    <article class="Trabajo">
-                        <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
-                        <p>HULT PRIZE - MONTERREY, MEXICO</p>
-                        <p>I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.</p>
-                    </article>
+                <div class="skill-category">
+                    <h3>Data & Tools</h3>
+                    <span class="skill-tag">Pyspark</span>
+                    <span class="skill-tag">Excel</span>
+                    <span class="skill-tag">GitHub</span>
+                    <span class="skill-tag">Docker</span>
+                </div>
 
-                    <article class="Trabajo">
-                        <h3>PEDAGOGICAL ACTIVITIES PROGRAMMER - (JANUARY 2024 - DECEMBER 2024)</h3>
-                        <p>TERA - MEXICO CITY</p>
-                        <p>Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.</p>
-                    </article>
 
-                    <article class="Trabajo">
-                        <h3>MECHANIC AND DESIGNER - (SEPTEMBER 2023 - DECEMBER 2024)</h3>
-                        <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
-                        <p>Worked on the mechanics and design of the car.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>GENERAL ASSISTANT - (NOVEMBER 2022 - JANUARY 2023)</h3>
-                        <p>MULTISOLUCIONES EN SEGURIDAD INTEGRAL – MORELOS, MEXICO</p>
-                        <p>Management of payroll and issuance of company invoices.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>GENERAL ASSISTANT - (AUGUST 2020 – DECEMBER 2020)</h3>
-                        <p>BUSINESS CONSULTING FIRM – MORELOS, MEXICO</p>
-                        <p>Support in billing, and review and control of excel documents.</p>
-                    </article>
+                <div class="skill-category">
+                    <h3>Software</h3>
+                    <span class="skill-tag">Unity</span>
+                    <span class="skill-tag">Visual Studio</span>
+                </div>
+                <div class="skill-category">
+                    <h3>Languages</h3>
+                    <span class="skill-tag">English</span>
+                    <span class="skill-tag">Spanish</span>
+                    <span class="skill-tag">German</span>
+                    <span class="skill-tag">Italian</span>
                 </div>
             </div>
-
-            <div class="section-box">
-                <h2>Education</h2>
-                <div class="content-box">
-                    <article>
-                        <h3>ENGINEERING SCHOLARSHIP - (2023 - PRESENT DAY)</h3>
-                        <p>Bachelor of Mechatronics Engineering</p>
-                        <p>Bachelor of Data Science</p>
-                        <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
-                    </article>
-
-                    <article>
-                        <h3>PATH WITH UNITY - (MAY 2024 – DECEMBER 2025)</h3>
-                        <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
-                    </article>
-
-                    <article>
-                        <h3>CERTIFICATE IN INNOVATION AT EPIC LAB - (OCTOBER 2024 – NOVEMBER 2024)</h3>
-                        <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
-                    </article>
-
-                    <article>
-                        <h3>BACHILLERATO EN ESCUELA DE ARTES - (2019-2022)</h3>
-                        <p>INSTITUTO BOTTICELLI – CUERNAVACA, MORELOS, MEXICO</p>
-                    </article>
-
-                    <article>
-                        <h3>GERMAN ONLINE CERTIFICATE C1 - (2020 -2022)</h3>
-                        <p>GISMA GLOBAL GMBH - HANNOVER, GERMANY</p>
-                    </article>
-
-                    <article>
-                        <h3>KLASSE 10 - (2018 -2019)</h3>
-                        <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
-                    </article>
-                </div>
-            </div>
-
-            <div class="section-box">
-                <h2>Contacto</h2>
-                <div class="content-box">
-                    <div class="contact">
-                        <div class="contact-item">
-                            <strong>GitHub</strong><br>
-                            <a href="https://github.com/TellezM" target="_blank">@TellezM</a>
-                        </div>
-                        <div class="contact-item">
-                            <strong>Email</strong><br>
-                            <a href="mailto: marciotellezro@gmail.com"> Marcio Tellez</a>
-                        </div>
-                        <div class="contact-item">
-                            <strong>LinkedIn</strong><br>
-                            <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank"> Marcio Tellez </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-            </div>
-
             <div class="section-box">
                 <h2>Experiance</h2>
                 <div class="experiance">
