--- a/index.html
+++ b/index.html
@@ -1,77 +1,72 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marcio Tellez - My Page</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marcio Tellez</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #04050b 0%, #14044e 100%);
-            min-height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
-        .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
-        header { text-align: center; padding: 60px 20px; color: white; }
-        header h1 {
-            font-size: 3.5em; margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            animation: fadeInDown 1s ease;
+        .container {
+            width: 80%;
+            margin: auto;
+            padding-top: 20px;
         }
-        header p { font-size: 1.3em; opacity: 0.95; animation: fadeInUp 1s ease; }
-        .content {
-            background: white; border-radius: 20px; padding: 40px; margin: 30px 0;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2); animation: fadeIn 1.2s ease;
+        header, footer {
+            text-align: center;
+            padding: 20px;
         }
-        .section { margin-bottom: 40px; }
-        .section h2 {
-            color: #112ca7; font-size: 2em; margin-bottom: 20px; padding-bottom: 10px;
-            border-bottom: 3px solid #112ca7;
+
+        /* White card style for each section */
+        .card {
+            background-color: white;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 10px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
-        .section p { font-size: 1.1em; margin-bottom: 15px; text-align: justify; }
-        .skills { display: flex; flex-wrap: wrap; gap: 15px; margin-top: 20px; }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+        }
+
+        .skill-category {
+            background: #fafafa;
+            border-radius: 8px;
+            padding: 15px;
+            box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+        }
+
         .skill-tag {
-            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
-            color: white; padding: 10px 20px; border-radius: 25px; font-weight: 600;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: transform 0.3s ease;
+            display: inline-block;
+            background-color: #e8e8e8;
+            padding: 5px 10px;
+            margin: 4px;
+            border-radius: 5px;
+            font-size: 14px;
         }
-        .skill-tag:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+
+        .contact {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
         }
-        .contact { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px; }
+
         .contact-item {
-            flex: 1; min-width: 200px; background: #f8f9fa; padding: 20px;
-            border-radius: 10px; text-align: center; transition: transform 0.3s ease;
+            background: #fafafa;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+            flex: 1;
+            min-width: 200px;
         }
-        .contact-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-        }
-        .contact-item a { color: #2645d1; text-decoration: none; font-weight: 600; }
-        .contact-item a:hover { text-decoration: underline; }
-        footer { text-align: center; padding: 30px; color: white; opacity: 0.9; }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes fadeInDown {
-            from { opacity: 0; transform: translateY(-30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @media (max-width: 768px) {
-            header h1 { font-size: 2.5em; }
-            .content { padding: 25px; }
-            .section h2 { font-size: 1.5em; }
-        }
-      .section-box { background: #ffffff; padding: 25px; border-radius: 12px; margin-bottom: 30px; }
-</style>
+    </style>
 </head>
 <body>
     <div class="container">
@@ -80,26 +75,21 @@
             <p>Welcome to My_Page</p>
         </header>
 
-        <div class="content">
-            <div class="section-box">
-                <h2>About me</h2>
-                <div class="content-box">
-                    <p>
-                        I´ve always been in love with sports, especially motor sports and cars. 
-                        As in today I look forward to finding a workplace where I can show my 
-                        skills and help however I can.
-                    </p>
-                </div>
-            </div>
-            <div class="section-box">
-                <h2>Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill-category">
-                        <h3>Programming Languages</h3>
-                        <span class="skill-tag">Python</span>
-                        <span class="skill-tag">Java</span>
-                        <span class="skill-tag">C#</span>
-                    </div>
+        <!-- ABOUT ME -->
+        <section class="card">
+            <h2>About me</h2>
+            <p>I’ve always been in love with sports, especially motor sports and cars. I look forward to finding a workplace where I can show my skills and help however I can.</p>
+        </section>
+
+        <!-- SKILLS with categories -->
+        <section class="card">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-category">
+                    <h3>Programming Languages</h3>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Java</span>
+                    <span class="skill-tag">C#</span>
                 </div>
 
                 <div class="skill-category">
@@ -110,7 +100,6 @@
                     <span class="skill-tag">Cassandra</span>
                 </div>
 
-
                 <div class="skill-category">
                     <h3>Data & Tools</h3>
                     <span class="skill-tag">Pyspark</span>
@@ -119,12 +108,12 @@
                     <span class="skill-tag">Docker</span>
                 </div>
 
-
                 <div class="skill-category">
                     <h3>Software</h3>
                     <span class="skill-tag">Unity</span>
                     <span class="skill-tag">Visual Studio</span>
                 </div>
+
                 <div class="skill-category">
                     <h3>Languages</h3>
                     <span class="skill-tag">English</span>
@@ -133,106 +122,95 @@
                     <span class="skill-tag">Italian</span>
                 </div>
             </div>
-            <div class="section-box">
-                <h2>Experiance</h2>
-                <div class="experiance">
-                    <article class="Trabajo">
-                        <h3>S&P INTERN - (MAY 2025 - PRESENT DAY 2025)</h3>
-                        <p>DIDI - MEXICO CITY</p>
-                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    </article>
+        </section>
 
-                    <article class="Trabajo">
-                        <h3>BI INTERN - (JANUARY 2025 - MAY 2025)</h3>
-                        <p>DIDI - MEXICO CITY</p>
-                        <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
-                    </article>
+        <!-- EXPERIENCE -->
+        <section class="card">
+            <h2>Experience</h2>
+            <article>
+                <h3>S&P INTERN - (MAY 2025 - PRESENT)</h3>
+                <p>DIDI - MEXICO CITY</p>
+                <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+            </article>
+            <article>
+                <h3>BI INTERN - (JANUARY 2025 - MAY 2025)</h3>
+                <p>DIDI - MEXICO CITY</p>
+                <p>I collect, analyze, and visualize data to help organizations make informed business decisions.</p>
+            </article>
+            <article>
+                <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
+                <p>HULT PRIZE - MONTERREY, MEXICO</p>
+                <p>I was developing and pitching an innovative, socially impactful business idea.</p>
+            </article>
+            <article>
+                <h3>PEDAGOGICAL ACTIVITIES PROGRAMMER - (JANUARY 2024 - DECEMBER 2024)</h3>
+                <p>TERA - MEXICO CITY</p>
+                <p>Designed and developed Unity-based computer activities for children aged 6–12.</p>
+            </article>
+            <article>
+                <h3>MECHANIC AND DESIGNER - (SEPTEMBER 2023 - DECEMBER 2024)</h3>
+                <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
+                <p>Worked on the mechanics and design of the car.</p>
+            </article>
+        <article>
+                <h3>GENERAL ASSISTANT - (NOVEMBER 2022 - JANUARY 2023)</h3>
+                <p>MULTISOLUCIONES EN SEGURIDAD INTEGRAL – MORELOS, MEXICO</p>
+                <p>Management of payroll and issuance of company invoices.</p>
+            </article>
+            <article>
+                <h3>GENERAL ASSISTANT - (AUGUST 2020 – DECEMBER 2020)</h3>
+                <p>BUSINESS CONSULTING FIRM – MORELOS, MEXICO</p>
+                <p>Support in billing, and review and control of Excel documents.</p>
+            </article>
+        </section>
 
-                    <article class="Trabajo">
-                        <h3>HULT PRIZE NATIONALS - (OCTOBER 2024 - MAY 2025)</h3>
-                        <p>HULT PRIZE - MONTERRY, MEXICO</p>
-                        <p>I was developing and pitching an innovative, socially impactful business idea that addresses a pressing global challenge.</p>
-                    </article>
+        <!-- EDUCATION -->
+        <section class="card">
+            <h2>Education</h2>
+            <article>
+                <h3>ENGINEERING SCHOLARSHIP - (2023 - PRESENT DAY)</h3>
+                <p>Bachelor of Mechatronics Engineering<br>Bachelor of Data Science<br>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
+            </article>
+            <article>
+                <h3>PATH WITH UNITY - (MAY 2024 – DECEMBER 2025)</h3>
+                <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
+            </article>
+            <article>
+                <h3>CERTIFICATE IN INNOVATION AT EPIC LAB - (OCTOBER 2024 – NOVEMBER 2024)</h3>
+                <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
+            </article>
+            <article>
+                <h3>BACHILLERATO EN ESCUELA DE ARTES - (2019 - 2022)</h3>
+                <p>INSTITUTO BOTTICELLI – CUERNAVACA, MORELOS, MEXICO</p>
+            </article>
+            <article>
+                <h3>GERMAN ONLINE CERTIFICATE C1 - (2020 - 2022)</h3>
+                <p>GISMA GLOBAL GMBH - HANNOVER, GERMANY</p>
+            </article>
+            <article>
+                <h3>KLASSE 10 - (2018 - 2019)</h3>
+                <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
+            </article>
+        </section>
 
-                    <article class="Trabajo">
-                        <h3>PEDAGOGICAL ACTIVITIES PROGRAMER - (JANUARY 2024 - DECEMBER 2024)</h3>
-                        <p>TERA - MEXICO CITY</p>
-                        <p>Design and development of computer activities in UNITY to reinforce the learning of children between 6 and 12 years old.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>MECHANIC AND DESIGNER - (SEPTEMBER 2023 - DECEMBER 2024)</h3>
-                        <p>COLMILLOS RACING TEAM - MEXICO CITY</p>
-                        <p>Worked on the mechanics and design of the car.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>GENERAL ASSISTANT - (NOVEMBER 2022 - JANUARY 2023)</h3>
-                        <p>MULTISOLUCIONES EN SEGURIDAD INTEGRAL – MORELOS, MEXICO</p>
-                        <p>Management of payroll and issuance of company invoices.</p>
-                    </article>
-
-                    <article class="Trabajo">
-                        <h3>GENERAL ASSISTANT - (AUGUST 2020 – DECEMBER 2020)</h3>
-                        <p>BUSINESS CONSULTING FIRM – MORELOS, MEXICO</p>
-                        <p>Support in billing, and review and control of Excel documents.</p>
-                    </article>
+        <!-- CONTACT -->
+        <section class="card">
+            <h2>Contact</h2>
+            <div class="contact">
+                <div class="contact-item">
+                    <strong>GitHub</strong><br>
+                    <a href="https://github.com/TellezM" target="_blank">@TellezM</a>
+                </div>
+                <div class="contact-item">
+                    <strong>Email</strong><br>
+                    <a href="mailto:marciotellezro@gmail.com">Marcio Tellez</a>
+                </div>
+                <div class="contact-item">
+                    <strong>LinkedIn</strong><br>
+                    <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank">Marcio Tellez</a>
                 </div>
             </div>
-
-            <div class="section-box">
-                <h2>Education</h2>
-                <article>
-                    <h3>ENGINEERING SCHOLARSHIP - (2023 - PRESENT DAY)</h3>
-                    <p>Bachelor of Mechatronics Engineering<br>
-                    Bachelor of Data Science<br>
-                    Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
-                </article>
-
-                <article>
-                    <h3>PATH WITH UNITY - (MAY 2024 – DECEMBER 2025)</h3>
-                    <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
-                </article>
-
-                <article>
-                    <h3>CERTIFICATE IN INNOVATION AT EPIC LAB - (OCTOBER 2024 – NOVEMBER 2024)</h3>
-                    <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
-                </article>
-
-                <article>
-                    <h3>BACHILLERATO EN ESCUELA DE ARTES - (2019-2022)</h3>
-                    <p>INSTITUTO BOTTICELLI – CUERNAVACA, MORELOS, MEXICO</p>
-                </article>
-
-                <article>
-                    <h3>GERMAN ONLINE CERTIFICATE C1 - (2020 - 2022)</h3>
-                    <p>GISMA GLOBAL GMBH - HANNOVER, GERMANY</p>
-                </article>
-
-                <article>
-                    <h3>KLASSE 10 - (2018 - 2019)</h3>
-                    <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
-                </article>
-            </div>
-
-            <div class="section-box">
-                <h2>Contacto</h2>
-                <div class="contact">
-                    <div class="contact-item">
-                        <strong>GitHub</strong><br>
-                        <a href="https://github.com/TellezM" target="_blank">@TellezM</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>Email</strong><br>
-                        <a href="mailto: marciotellezro@gmail.com"> Marcio Tellez</a>
-                    </div>
-                    <div class="contact-item">
-                        <strong>LinkedIn</strong><br>
-                        <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank"> Marcio Tellez </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </section>
 
         <footer>
             <p>&copy; 2024 Marcio Tellez. Todos los derechos reservados.</p>
