--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcio Tellez</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+        line-height: 1.6; color: #333; 
+        background: linear-gradient(135deg, #04050b 0%, #14044e 100%); 
+        min-height: 100vh; padding-bottom: 40px; }
         .container {
             width: 80%;
             margin: auto;
@@ -45,7 +43,7 @@
 
         .skill-tag {
             display: inline-block;
-            background-color: #e8e8e8;
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
             padding: 5px 10px;
             margin: 4px;
             border-radius: 5px;
