corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marcio Tellez</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-        line-height: 1.6; color: #333; 
-        background: linear-gradient(135deg, #04050b 0%, #14044e 100%); 
-        min-height: 100vh; padding-bottom: 40px; }
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            line-height: 1.6; 
+            color: #333; 
+            background: linear-gradient(135deg, #04050b 0%, #14044e 100%); 
+            min-height: 100vh; padding-bottom: 40px; 
+        }
         .container {
             width: 80%;
             margin: auto;
             padding-top: 20px;
         }
-        header, footer {
-            text-align: center;
-            padding: 20px;
+        header { 
+            text-align: center; 
+            padding: 60px 20px; 
+            color: white; 
         }
 
         /* White card style for each section */
@@ -38,17 +42,17 @@
             background: #fafafa;
             border-radius: 8px;
             padding: 15px;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 1px 4px rgb(243, 239, 239);
         }
 
-        .skill-tag {
-            display: inline-block;
-            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
-            padding: 5px 10px;
-            margin: 4px;
-            border-radius: 5px;
-            font-size: 14px;
-        }
+        .skill-tag { 
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%); 
+            color: white; 
+            padding: 10px 20px; 
+            border-radius: 25px; 
+            font-weight: 600; 
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
+            transition: transform 0.3s ease; }
 
         .contact {
             display: flex;
