--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
         }
 
         .skill-category {
-            background: #fafafa;
-            border-radius: 8px;
-            padding: 15px;
-            box-shadow: 0 1px 4px rgb(243, 239, 239);
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            align-items: flex-start;
         }
+
+        .skill-category h3 {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
 
         .skill-tag { 
             background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%); 
@@ -52,7 +58,8 @@
             border-radius: 25px; 
             font-weight: 600; 
             box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
-            transition: transform 0.3s ease; }
+            transition: transform 0.3s ease; 
+        }
 
         .contact {
             display: flex;
