corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -31,26 +31,31 @@
             border-radius: 10px;
             box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
-
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4 columnas iguales */
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 25px;
-            align-items: start;
+            justify-content: center; 
         }
 
         .skill-category {
-            background: #fafafa;
-            border-radius: 8px;
-            padding: 15px;
+            background: #fafafa;          /* Fondo blanco */
+            border-radius: 12px;
+            padding: 25px;                /* Más grande */
             box-shadow: 0 1px 4px rgb(243, 239, 239);
-            min-height: 160px; /* hace que todos los cuadros midan parecido */
+            min-height: 220px;            /* Altura uniforme */
+            text-align: center;           /* Centra contenido */
+            
+            display: flex;
+            flex-direction: column;
+            align-items: center;          /* Centra horizontal */
+            gap: 12px;
         }
 
         .skill-category h3 {
-            width: 100%;
             margin-bottom: 10px;
         }
+
         .skill-tag { 
             background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%); 
             color: white; 
@@ -59,6 +64,7 @@
             font-weight: 600; 
             box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
             transition: transform 0.3s ease; 
+            display: inline-block;         /* para centrar bien */
         }
 
         .contact {
