--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             font-weight: 600; 
             box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
             transition: transform 0.3s ease; 
-            display: inline-block;         /* para centrar bien */
+            display: inline-block;
         }
 
         .contact {
@@ -99,10 +99,11 @@
             <h2>Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Programming Languages</h3>
-                    <span class="skill-tag">Python</span>
-                    <span class="skill-tag">Java</span>
-                    <span class="skill-tag">C#</span>
+                    <h3>Languages</h3>
+                    <span class="skill-tag">English</span>
+                    <span class="skill-tag">Spanish</span>
+                    <span class="skill-tag">German</span>
+                    <span class="skill-tag">Italian</span>
                 </div>
 
                 <div class="skill-category">
@@ -128,11 +129,10 @@
                 </div>
 
                 <div class="skill-category">
-                    <h3>Languages</h3>
-                    <span class="skill-tag">English</span>
-                    <span class="skill-tag">Spanish</span>
-                    <span class="skill-tag">German</span>
-                    <span class="skill-tag">Italian</span>
+                    <h3>Programming Languages</h3>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Java</span>
+                    <span class="skill-tag">C#</span>
                 </div>
             </div>
         </section>
