--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
+            align-items: center; 
             box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
         .skills-grid {
