--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 25px;
+            align-items: center; 
             justify-content: center; 
         }
 
