corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 25px;
-            align-items: center; 
+            ajustify-content: center;
+            justify-items: center;
+            align-items: start;
             justify-content: center; 
         }
 
