corregir mi experiencia index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             color: white; 
         }
 
-        /* White card style for each section */
         .card {
             background-color: white;
             padding: 20px;
@@ -74,6 +73,8 @@
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
+            align-items: center; 
+            text-align: center;
         }
 
         .contact-item {
@@ -84,6 +85,7 @@
             box-shadow: 0 1px 4px rgba(0,0,0,0.1);
             flex: 1;
             align-items: center; 
+            text-align: center;
             min-width: 200px;
         }
     </style>
