--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
             margin: 20px 0;
             border-radius: 10px;
             align-items: center; 
+            justify-content: center; 
             box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 25px;
-            align-items: center; 
             justify-content: center; 
+            align-items: center; 
         }
 
         .skill-category {
