--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
-            align-items: center; 
-            justify-content: center; 
             box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 25px;
-            justify-content: center; 
-            align-items: center; 
+            justify-content: center;
+            justify-items: center;  
         }
 
         .skill-category {
