corregir los tags dentro de la card de skills

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
             gap: 25px;
             justify-content: center;
-            justify-items: center;  
+            justify-items: center;
+        }
+        .skills-grid > * {
+            width: 100%;
+            max-width: 260px; /* Hace que cada card tenga tamaño fijo */
         }
 
         .skill-category {
