agregar tags a los skills

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         }
 
         .skill-category {
-            background: #fafafa;
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%); 
             border-radius: 12px;
             padding: 25px;
+            color: white;
             box-shadow: 0 1px 4px rgb(243, 239, 239);
             min-height: 220px;
             text-align: center;
@@ -60,8 +61,8 @@
         }
 
         .skill-tag { 
-            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%); 
-            color: white; 
+            background: #fafafa; 
+            color: rgb(7, 7, 7); 
             padding: 10px 20px; 
             border-radius: 25px; 
             font-weight: 600; 
@@ -216,27 +217,27 @@
 
         <section class="card">
             <h2>Education</h2>
-            <article class="education-tag">
+            <article class="experience-tag">
                 <h3>ENGINEERING SCHOLARSHIP - (2023 - PRESENT DAY)</h3>
                 <p>Bachelor of Mechatronics Engineering<br>Bachelor of Data Science<br>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
             </article>
-            <article class="education-tag">
+            <article class="experience-tag">
                 <h3>PATH WITH UNITY - (MAY 2024 – DECEMBER 2025)</h3>
                 <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
             </article>
-            <article class="education-tag">
+            <article class="experience-tag">
                 <h3>CERTIFICATE IN INNOVATION AT EPIC LAB - (OCTOBER 2024 – NOVEMBER 2024)</h3>
                 <p>Instituto Tecnológico Autónomo de México – MEXICO CITY, MEXICO</p>
             </article>
-            <article class="education-tag">
+            <article class="experience-tag">
                 <h3>BACHILLERATO EN ESCUELA DE ARTES - (2019 - 2022)</h3>
                 <p>INSTITUTO BOTTICELLI – CUERNAVACA, MORELOS, MEXICO</p>
             </article>
-            <article class="education-tag">
+            <article class="experience-tag">
                 <h3>GERMAN ONLINE CERTIFICATE C1 - (2020 - 2022)</h3>
                 <p>GISMA GLOBAL GMBH - HANNOVER, GERMANY</p>
             </article>
-            <article class="education-tag">
+            <article class="experience-tag">
                 <h3>KLASSE 10 - (2018 - 2019)</h3>
                 <p>Nicolaus-Cusanus-Gymnasium Bergisch Gladbach – BERGISCH GLADBACH, GERMANY</p>
             </article>
