--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         }
 
         .skill-category {
-            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%); 
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
             border-radius: 12px;
-            padding: 15px;
+            padding: 12px;                /* antes 15px */
             color: white;
             box-shadow: 0 1px 4px rgb(243, 239, 239);
-            min-height: 220px;
+            min-height: 140px;            /* antes 220px */
             text-align: center;
             display: flex;
             flex-direction: column;
-            align-items: center;          /* Centra horizontal */
-            gap: 12px;
+            align-items: center;
+            gap: 8px;                     /* antes 12px */
         }
 
         .skill-category h3 {
