--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             padding: 12px;                /* antes 15px */
             color: white;
             box-shadow: 0 1px 4px rgb(243, 239, 239);
-            min-height: 140px;            /* antes 220px */
+            width: 180px;             /* antes 220px */
             text-align: center;
             display: flex;
             flex-direction: column;
