--- a/index.html
+++ b/index.html
@@ -44,19 +44,20 @@
         }
 
         .skill-category {
-            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
-            border-radius: 12px;
-            padding: 12px;                /* antes 15px */
+    background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
+    border-radius: 12px;
+            padding: 20px;
             color: white;
             box-shadow: 0 1px 4px rgb(243, 239, 239);
-            width: 180px;             /* antes 220px */
+            
+            width: 260px;   /* 👈 ajusta este valor para controlar cuántas caben */
+            
             text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 8px;                     /* antes 12px */
+            gap: 12px;
         }
-
         .skill-category h3 {
             margin-bottom: 10px;
         }
