--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
         .card {
             background-color: white;
+            text-align: center;
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
@@ -41,7 +42,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
-            justify-content: center;   /* 👈 centra siempre las filas */
+            justify-content: center;  
         }
 
         .skill-category {
