los tags mas pequeños

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         }
         .skills-grid {
             display: grid;
+            text-align: center;
             grid-template-columns: repeat(auto-fit, minmax(260px, max-content));
             gap: 25px;
             justify-content: center;
