About me mas chico para que quepa una foto mia

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             gap: 20px;
             justify-content: center;  
         }
+        .about-box {
+            width: 50%;
+            margin: auto;
+            }
 
         .skill-category {
             background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
@@ -132,8 +136,10 @@
         </header>
 
         <section class="card">
-            <h2>About me</h2>
-            <p>I’ve always been in love with sports, especially motor sports and cars. I look forward to finding a workplace where I can show my skills and help however I can.</p>
+            <div class="about-box"></div>
+                <h2>About me</h2>
+                <p>I’ve always been in love with sports, especially motor sports and cars. I look forward to finding a workplace where I can show my skills and help however I can.</p>
+            </div>
         </section>
 
         <section class="card">
