About me mas chico para que quepa una foto mia

--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
             opacity: 0.9;
             font-size: 15px;
         }
+        .about-card {
+            width: 50%;           /* ocupa la mitad de la pantalla */
+            margin-left: 0;       /* se va a la izquierda */
+            margin-right: auto;   /* evita centrado */
+            text-align: left;     /* para que no quede todo centrado */
+        }
+
 
     </style>
 </head>
@@ -135,11 +142,9 @@
             <p>Welcome to My_Page</p>
         </header>
 
-        <section class="card">
-            <div class="about-box"></div>
-                <h2>About me</h2>
-                <p>I’ve always been in love with sports, especially motor sports and cars. I look forward to finding a workplace where I can show my skills and help however I can.</p>
-            </div>
+        <section class=" card about-card">
+            <h2>About me</h2>
+            <p>I’ve always been in love with sports, especially motor sports and cars. I look forward to finding a workplace where I can show my skills and help however I can.</p>
         </section>
 
         <section class="card">
