cambiar formato foto

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <p>I’ve always been in love with sports, especially motor sports and cars.
                 I look forward to finding a workplace where I can show my skills and help however I can.</p>
             </section>
-            <img class="about-photo" src="TU_IMAGEN_AQUI.jpg" alt="Profile Photo">
+            <img class="about-photo" src="MarcioT.jpg" alt="Profile Photo">
         </div>
 
         <section class="card">
