cambiar mi about me

--- a/index.html
+++ b/index.html
@@ -127,22 +127,22 @@
         }
         .about-wrapper {
             display: flex;
-            align-items: center;   /* centra verticalmente */
-            gap: 30px;             /* separación entre card y foto */
+            align-items: center; 
+            gap: 30px;       
             width: 100%;
             justify-content: flex-start;
         }
 
         .about-card {
-            width: 50%;            /* card ocupa la mitad izquierda */
+            width: 65%;            
             text-align: left;
         }
 
         .about-photo {
-            width: 180px;          /* ajusta el tamaño */
+            width: 180px;   
             height: 180px;
             object-fit: cover;
-            border-radius: 50%;    /* foto redonda */
+            border-radius: 50%;  
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
         }
 
@@ -159,9 +159,11 @@
         <div class="about-wrapper">
             <section class="card about-card">
                 <h2>About me</h2>
-                <p>I’ve always been in love with sports, especially motor sports and cars.
-                I look forward to finding a workplace where I can show my skills and help however I can.</p>
-            </section>
+                <p>Passionate about applying Data Science to real-world challenges, 
+                    especially in high-performance environments. 
+                    I’m driven to turn data into insights that improve decision-making, 
+                    efficiency, and results. Looking forward to contributing my analytical skills wherever I can add value.
+                </section>
             <img class="about-photo" src="MarcioT.jpg" alt="Profile Photo">
         </div>
 
