--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@
             gap: 30px;       
             width: 100%;
             justify-content: flex-start;
+            text-align: center;
         }
 
         .about-card {
             width: 70%;            
             text-align: left;
+            text-align: center;
         }
 
         .about-photo {
