--- a/index.html
+++ b/index.html
@@ -158,11 +158,17 @@
             margin-top: 12px;     
         }
 
-        .about-tag p {
-            margin: 0;
-            line-height: 1.4;
-            font-size: 15px;
-            text-align: left;        
+        .about-tag {
+            background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
+            color: white;
+            padding: 25px 30px;    
+            border-radius: 20px;
+            font-size: 18px;          
+            font-weight: 500;
+            max-width: 800px;       
+            margin: 20px auto;      
+            box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+            line-height: 1.6;
         }
 
         @media (max-width: 600px) {
