modificar el box de about me

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
         }
 
         .about-card {
-            width: 70%;            
-            text-align: left;
+            width: 60%;   
+            padding: 15px 20px;
+            margin: 20px auto;         
             text-align: center;
         }
 
@@ -161,7 +162,7 @@
         .about-tag {
             background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
             color: white;
-            padding: 25px 30px;    
+            padding: 25px 30px;      
             border-radius: 20px;
             font-size: 18px;          
             font-weight: 500;
