modificar el box de about me

--- a/index.html
+++ b/index.html
@@ -135,10 +135,9 @@
         }
 
         .about-card {
-            width: 60%;   
-            padding: 15px 20px;
-            margin: 20px auto;         
-            text-align: center;
+            width: 70%; 
+            margin-bottom: 5px;
+            font-size: 1.3rem; 
         }
 
         .about-photo {
