--- a/index.html
+++ b/index.html
@@ -137,7 +137,13 @@
         .about-card {
             width: 70%; 
             margin-bottom: 5px;
-            font-size: 1.3rem; 
+            margin: 5px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+        }
+        .about-card h2 {
+            margin: 3px 0;           /* reduce espacio arriba y debajo del título */
+            font-size: 1.3rem;
         }
 
         .about-photo {
