foto mas grande

--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
         }
         .about-card h2 {
-            margin: 3px 0;           /* reduce espacio arriba y debajo del título */
-            font-size: 1.3rem;
+            margin: 3px 0;  
         }
 
         .about-photo {
