Titulos about me mas grande

--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@
         .about-card h2 {
             margin: 3px 0;  
         }
+        .section-title {
+            font-size: 3.5rem;   /* Aumenta solo el tamaño del título */
+            margin-bottom: 25px;
+            text-align: center;
+        }
 
         .about-photo {
             width: 250px;   
@@ -198,7 +203,7 @@
 
         <div class="about-wrapper">
             <section class="card about-card">
-                <h2>About me</h2>
+                <h2 class="section-title about-title">About me</h2>
                 <div class="about-tag">
                     <p>Passionate about using Data Science to solve real-world challenges, 
                         especially in sports and high-performance environments. 
