--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             margin: 3px 0;  
         }
         .section-title {
-            font-size: 3.5rem;   /* Aumenta solo el tamaño del título */
+            font-size: 2rem;  
             margin-bottom: 25px;
             text-align: center;
         }
