Headear mas grande

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             margin: 3px 0;  
         }
         .section-title {
-            font-size: 2rem;  
+            font-size: 1.5rem;  
             margin-bottom: 25px;
             text-align: center;
         }
@@ -198,7 +198,7 @@
     <div class="container">
         <header>
             <h1>Marcio Tellez</h1>
-            <p>Welcome to My_Page</p>
+            <p>Welcome</p>
         </header>
 
         <div class="about-wrapper">
