--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
         }
 
         .about-photo {
-            width: 250px;   
+            width: 250px;  
             height: 250px;
-            object-fit: cover;
-            border-radius: 50%;  
+            object-fit: cover; 
+            border-radius: 10px; 
             box-shadow: 0 4px 8px rgba(0,0,0,0.3);
         }
         .about-tag {
