--- a/index.html
+++ b/index.html
@@ -205,11 +205,12 @@
             <section class="card about-card">
                 <h2 class="section-title about-title">About me</h2>
                 <div class="about-tag">
-                    <p>Passionate about using Data Science to solve real-world challenges, 
-                        especially in sports and high-performance environments. 
-                        I love turning data into insights that improve strategy, 
-                        efficiency, and results. Always excited to contribute my analytical 
-                        skills wherever they can make an impact.
+                    <p>Since I was a child, I wanted to be part of a team who 
+                        can innovate and make a better world, 
+                        not only within technology but also as a society. 
+                        I've always been in love with sports, especially motor sports and cars. 
+                        As in today I look forward to finding a workplace where 
+                        I can show my skills and help however I can.
                     </p>
                 </div>
             </section>
@@ -342,6 +343,10 @@
                 <div class="contact-item">
                     <strong>LinkedIn</strong><br>
                     <a href="https://www.linkedin.com/in/marcio-tellez-606a36255/" target="_blank">Marcio Tellez</a>
+                </div>
+                <div class="contact-item">
+                    <strong>Phone</strong><br>
+                    <p> 7772337984 </p>
                 </div>
             </div>
         </section>
