--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@
                     <strong>Phone</strong><br>
                     <p> 7772337984 </p>
                 </div>
+                <div class="contact-item">
+                    <strong>Mail</strong><br>
+                    <p> marciotellezro@gmail.com </p>
+                </div>
             </div>
         </section>
 
