--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
             text-align: center;
             min-width: 200px;
         }
+        .contact-item a {
+            color: white;
+            text-decoration: none;
+        }
+        .contact-item a:hover {
+            color: #e0e0e0;
+            text-decoration: underline;
+        }
         .experience-tag {
             background: linear-gradient(135deg, #04050b 0%, #2e09b7 100%);
             color: white;
