--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             min-width: 200px;
         }
         .contact-item a {
-            color: white;
+            color: rgb(96, 13, 13);
             text-decoration: none;
         }
         .contact-item a:hover {
@@ -354,11 +354,7 @@
                 </div>
                 <div class="contact-item">
                     <strong>Phone</strong><br>
-                    <p> 7772337984 </p>
-                </div>
-                <div class="contact-item">
-                    <strong>Mail</strong><br>
-                    <p> marciotellezro@gmail.com </p>
+                    <a href="tel:7772337984">7772337984</a>
                 </div>
             </div>
         </section>
